--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -4,8 +4,10 @@
 {% block content %}
 
 <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+    <form action="#" method="post">
+        {{ form_widget(form) }}
+        <input type="submit" name="submit" />
+    </form>
 </div>
 
 {% endblock %}
