showing result of rotated gangrun

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -32,4 +32,13 @@
         Verlust Breite: {{ layout.getWidthWaste() }}mm
     </div>
 </div>
+
+<div class="panel panel-primary">
+    <div class="panel-heading">Nutzenkalkulation (rotiert)</div>
+    <div class="panel-body">
+        Anzahl Nutzen {{ layout2.getNumberOfGangRuns() }}<br />
+        Verlust Länge: {{ layout2.getLengthWaste() }}mm<br />
+        Verlust Breite: {{ layout2.getWidthWaste() }}mm
+    </div>
+</div>
 {% endblock %}
