using sanpi twbs installer for automatic updates

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -3,7 +3,7 @@
     <head>
         <title>Letterpress Calculator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     </head>
     <body>
         <div class="navbar navbar-default">
@@ -26,10 +26,5 @@
         <div class="container">
             {% block content %}{% endblock %}
         </div>
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="//code.jquery.com/jquery.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
