--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -4,6 +4,16 @@
 {% block content %}
 
 <div class="panel panel-default">
+    <div class="panel-body">
+        <form action="#" method="post" role="form">
+            {{ form_widget(form) }}
+                <br />
+            <input type="submit" name="submit" value="Berechnen" class="btn btn-primary"/>
+        </form>
+    </div>
+</div>
+
+<div class="panel panel-default">
     <div class="panel-heading">Papier</div>
     <div class="panel-body">
         Name: {{ paper.name }}<br />
