--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -13,64 +13,84 @@
     </div>
 </div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">Papier</div>
-    <div class="panel-body">
-        Name: {{ paper.name }}<br />
-        Länge: {{ paper.length }}mm<br />
-        Breite: {{ paper.width }}mm<br />
-        {{ paper.isGrain('LONG_GRAIN') ? 'long grain' : 'short grain' | trans}}
+{% if paper is not null %}
+    <div class="panel panel-default">
+        <div class="panel-heading">Papier</div>
+        <div class="panel-body">
+            Name: {{ paper.name }}<br />
+            Länge: {{ paper.length }}mm<br />
+            Breite: {{ paper.width }}mm<br />
+            {{ paper.isGrain('LONG_GRAIN') ? 'long grain' : 'short grain' | trans}}
+        </div>
     </div>
-</div>
 
-<div class="panel panel-default">
-    <div class="panel-heading">Endformat</div>
-    <div class="panel-body">
-        Innere Länge: {{ gangrun.getInnerLength() }}mm<br />
-        Innere Breite: {{ gangrun.getInnerWidth() }}mm<br />
-        Faltung: {{ gangrun.getFold() | trans}}<br />
-        Gefaltete Länge: {{ gangrun.getFoldedLength() }}mm<br />
-        Gefaltete Breite: {{ gangrun.getFoldedWidth() }}mm<br />
-        <hr />
-        Äußere Länge: {{ gangrun.getOuterLength() }}mm<br />
-        Äußere Breite: {{ gangrun.getOuterWidth() }}mm<br />
-        Rand: {{ gangrun.margin }}mm<br />
-    </div>
-</div>
 
-{% if layout is not null %}
-<div class="panel panel-primary">
-    <div class="panel-heading">Nutzenkalkulation</div>
-    <div class="panel-body">
-        Anzahl Nutzen {{ layout.getNumberOfGangRuns() }}<br />
-        Verlust Länge: {{ layout.getLengthWaste() }}mm<br />
-        Verlust Breite: {{ layout.getWidthWaste() }}mm
+    <div class="panel panel-default">
+        <div class="panel-heading">Endformat</div>
+        <div class="panel-body">
+            Innere Länge: {{ gangrun.getInnerLength() }}mm<br />
+            Innere Breite: {{ gangrun.getInnerWidth() }}mm<br />
+            Faltung: {{ gangrun.getFold() | trans}}<br />
+            Gefaltete Länge: {{ gangrun.getFoldedLength() }}mm<br />
+            Gefaltete Breite: {{ gangrun.getFoldedWidth() }}mm<br />
+            <hr />
+            Äußere Länge: {{ gangrun.getOuterLength() }}mm<br />
+            Äußere Breite: {{ gangrun.getOuterWidth() }}mm<br />
+            Rand: {{ gangrun.margin }}mm<br />
+        </div>
     </div>
-</div>
-{% else %}
-<div class="panel panel-danger">
-    <div class="panel-heading">Nutzenkalkulation</div>
-    <div class="panel-body">
-        Der Druck des unrotierten Endformats ist nicht möglich.
+
+    {% if layout is not null %}
+    <div class="panel panel-primary">
+        <div class="panel-heading">Nutzenkalkulation</div>
+        <div class="panel-body">
+            Anzahl Nutzen {{ layout.getNumberOfGangRuns() }}<br />
+            Verlust Länge: {{ layout.getLengthWaste() }}mm<br />
+            Verlust Breite: {{ layout.getWidthWaste() }}mm
+        </div>
     </div>
-</div>
+    {% else %}
+    <div class="panel panel-danger">
+        <div class="panel-heading">Nutzenkalkulation</div>
+        <div class="panel-body">
+            Der Druck des unrotierten Endformats ist nicht möglich.
+        </div>
+    </div>
+    {% endif %}
+
+    {% if layout2 is not null %}
+    <div class="panel panel-primary">
+        <div class="panel-heading">Nutzenkalkulation (rotiert)</div>
+        <div class="panel-body">
+            Anzahl Nutzen {{ layout2.getNumberOfGangRuns() }}<br />
+            Verlust Länge: {{ layout2.getLengthWaste() }}mm<br />
+            Verlust Breite: {{ layout2.getWidthWaste() }}mm
+        </div>
+    </div>
+    {% else %}
+    <div class="panel panel-danger">
+        <div class="panel-heading">Nutzenkalkulation (rotiert)</div>
+        <div class="panel-body">
+            Der Druck des rotierten Endformats ist nicht möglich.
+        </div>
+    </div>
+    {% endif %}
+
+    <table class="table table-striped">
+        <tr>
+            <th>{{ 'Count' | trans }}</th>
+            <th>{{ 'Description' | trans }}</th>
+            <th>{{ 'Price' | trans }}</th>
+        </tr>
+
+        {% for position in order.getPositions() %}
+        <tr>
+            <td>{{ position.count }}</td>
+            <td>{{ position.description }}</td>
+            <td>{{ position.price }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 {% endif %}
 
-{% if layout2 is not null %}
-<div class="panel panel-primary">
-    <div class="panel-heading">Nutzenkalkulation (rotiert)</div>
-    <div class="panel-body">
-        Anzahl Nutzen {{ layout2.getNumberOfGangRuns() }}<br />
-        Verlust Länge: {{ layout2.getLengthWaste() }}mm<br />
-        Verlust Breite: {{ layout2.getWidthWaste() }}mm
-    </div>
-</div>
-{% else %}
-<div class="panel panel-danger">
-    <div class="panel-heading">Nutzenkalkulation (rotiert)</div>
-    <div class="panel-body">
-        Der Druck des rotierten Endformats ist nicht möglich.
-    </div>
-</div>
-{% endif %}
 {% endblock %}
