--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -24,6 +24,16 @@
         </div>
 
         <div class="container">
+            {% set alertTypeAvaillable = [ 'info', 'success', 'warning', 'danger'] %}
+            {% for alert in alertTypeAvaillable %}
+                {% for message in app.session.getFlashBag.get(alert) %}
+                    <div class="alert alert-{{ alert }}" >
+                        <!--<button class="close" data-dismiss="alert">×</button>-->
+                        {{ message|trans }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+
             {% block content %}{% endblock %}
         </div>
     </body>
