--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -4,6 +4,7 @@
         <title>Letterpress Calculator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.css" rel="stylesheet" media="screen">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
         <div class="navbar navbar-default">
